Log level select

--- a/app/storjshare.html
+++ b/app/storjshare.html
@@ -344,7 +344,14 @@
               <input type="text" class="form-control" placeholder="/home/gordon/.storjshare/">
             </div>
             <div class="col-xs-4">
-              <input type="number" class="form-control" placeholder="3" maxlength="4" minlength="0">
+              <select class="form-control">
+                <option>0</option>
+                <option>1</option>
+                <option>2</option>
+                <option selected>3</option>
+                <option>4</option>
+              </select>
+
             </div>
           </div>
 
