Advanced settings into tabs

--- a/app/storjshare.html
+++ b/app/storjshare.html
@@ -196,165 +196,171 @@
   <div class="modal fade text-center" id="settings" tabindex="-1" role="dialog" aria-labelledby="modalSettings">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-          <h4 class="modal-title">Advanced Settings</h4>
-        </div>
+
+        <ul class="nav nav-tabs">
+          <li class="active"><a data-toggle="tab" href="#SettingsGeneral">General</a></li>
+          <li><a data-toggle="tab" href="#SettingsNetwork">Network</a></li>
+          <li><a data-toggle="tab" href="#SettingsTunnels">Tunnels</a></li>
+          <li><a data-toggle="tab" href="#SettingsKeys">Keys</a></li>
+          <li><a data-toggle="tab" href="#SettingsLogs">Logs</a></li>
+        </ul>
+
         <div class="modal-body text-left">
+          <div class="tab-content">
 
-          <div class="row form-group">
-            <div class="col-xs-12">
-              <label for="MinToTask">
-                <input v-model="userdata.appSettings.minToTask" v-on:change="changeSettings" id="MinToTask" type="checkbox" checked> Display in system tray
-              </label>
+            <div id="SettingsGeneral" class="tab-pane fade in active">
+              <div class="row form-group">
+                <div class="col-xs-12">
+                  <label for="MinToTask">
+                    <input v-model="userdata.appSettings.minToTask" v-on:change="changeSettings" id="MinToTask" type="checkbox" checked> Display in system tray
+                  </label>
+                </div>
+              </div>
+
+              <div class="row form-group">
+                <div class="col-xs-12">
+                  <label for="LaunchOnBoot">
+                    <input v-model="userdata.appSettings.launchOnBoot" v-on:change="changeSettings" id="LaunchOnBoot" type="checkbox"> Launch Storj Share at user login
+                  </label>
+                </div>
+              </div>
+
+              <div class="row form-group">
+                <div class="col-xs-12">
+                  <label for="RunDrivesOnBoot">
+                    <input v-model="userdata.appSettings.runDrivesOnBoot" v-on:change="changeSettings" id="RunDrivesOnBoot" type="checkbox" checked> Share previously running drives at launch
+                  </label>
+                </div>
+              </div>
+
+              <div class="row form-group">
+                <div class="col-xs-12">
+                  <label for="TelemetryReport">
+                    <input v-model="userdata.appSettings.reportTelemetry" v-on:change="changeSettings" id="TelemetryReport" type="checkbox" checked> Send Telemetry Reports
+                  </label>
+                </div>
+              </div>
             </div>
+
+            <div id="SettingsNetwork" class="tab-pane fade">
+              <div class="row form-group">
+                <div class="col-xs-12">
+                  <label for="">Enter your public hostname or IP address</label>
+                  <input type="text" class="form-control" placeholder="127.0.0.1">
+                </div>
+              </div>
+
+              <hr>
+
+              <div class="row form-group">
+                <div class="col-xs-12">
+                  <label for="">Enter the URI of a known seed</label>
+                  <input type="text" class="form-control" placeholder="storj://api.storj.io:8443/78cfca0e01235db817728aec056d007672ffac63">
+                </div>
+              </div>
+
+              <hr>
+
+              <div class="row form-group">
+                <div class="col-xs-4">
+                  <input type="number" class="form-control margin-top" placeholder="0">
+                </div>
+                <div class="col-xs-8">
+                  <label for="">TCP port number the service should use <small>(0 for random)</small></small></label>
+                </div>
+              </div>
+
+              <div class="row form-group">
+                <div class="col-xs-4">
+                  <select class="form-control margin-top" id="nat-select">
+                    <option>Yes</option>
+                    <option>No</option>
+                  </select>
+                </div>
+                <div class="col-xs-8">
+                  <label for="nat-select">Use NAT traversal strategies to become available on the network</b></label>
+                </div>
+              </div>
+            </div>
+
+            <div id="SettingsTunnels" class="tab-pane fade">
+              <div class="row form-group">
+                <div class="col-xs-4">
+                  <input type="number" class="form-control margin-top" placeholder="3">
+                </div>
+                <div class="col-xs-8">
+                  <label for="">Number of tunnel connections other farmers can open through you</label>
+                </div>
+              </div>
+
+              <div class="row form-group">
+                <div class="col-xs-4">
+                  <input type="number" class="form-control margin-top" placeholder="0">
+                </div>
+                <div class="col-xs-8">
+                  <label for="">TCP port number the tunnel server should use <small>(0 for random)</small></label>
+                </div>
+              </div>
+
+              <div class="row form-group">
+                <div class="col-xs-4">
+                  <input type="number" class="form-control margin-top" placeholder="0">
+                </div>
+                <div class="col-xs-8">
+                  <label for="">Start TCP port for tunnel connections <small>(0 for random)</small></label>
+                </div>
+              </div>
+
+              <div class="row form-group">
+                <div class="col-xs-4">
+                  <input type="number" class="form-control margin-top" placeholder="0">
+                </div>
+                <div class="col-xs-8">
+                  <label>End TCP port for tunnel connections <small>(0 for random)</small></label>
+                </div>
+              </div>
+            </div>
+
+            <div id="SettingsKeys" class="tab-pane fade">
+              <div class="row form-group">
+                <div class="col-xs-12">
+                  <label for="">Enter the path to store your encrypted private key</label>
+                  <input type="text" class="form-control" placeholder="/home/gordon/.storjshare/id_ecdsa">
+                </div>
+              </div>
+
+              <div class="row form-group">
+                <div class="col-xs-12">
+                  <label for="">Enter a password to protect your private key</label>
+                  <input type="password" class="form-control" placeholder="********">
+                </div>
+              </div>
+            </div>
+
+            <div id="SettingsLogs" class="tab-pane fade">
+              <div class="row form-group">
+                <div class="col-xs-8">
+                  <label for="">Logfile location</label>
+                </div>
+                <div class="col-xs-4">
+                  <label>Logfile level</label>
+                </div>
+                <div class="col-xs-8">
+                  <input type="text" class="form-control" placeholder="/home/gordon/.storjshare/">
+                </div>
+                <div class="col-xs-4">
+                  <select class="form-control">
+                    <option>0</option>
+                    <option>1</option>
+                    <option>2</option>
+                    <option selected>3</option>
+                    <option>4</option>
+                  </select>
+                </div>
+              </div>
+            </div>
+
           </div>
-
-          <div class="row form-group">
-            <div class="col-xs-12">
-              <label for="LaunchOnBoot">
-                <input v-model="userdata.appSettings.launchOnBoot" v-on:change="changeSettings" id="LaunchOnBoot" type="checkbox"> Launch Storj Share at user login
-              </label>
-            </div>
-          </div>
-
-          <div class="row form-group">
-            <div class="col-xs-12">
-              <label for="RunDrivesOnBoot">
-                <input v-model="userdata.appSettings.runDrivesOnBoot" v-on:change="changeSettings" id="RunDrivesOnBoot" type="checkbox" checked> Share previously running drives at launch
-              </label>
-            </div>
-          </div>
-
-          <div class="row form-group">
-            <div class="col-xs-12">
-              <label for="TelemetryReport">
-                <input v-model="userdata.appSettings.reportTelemetry" v-on:change="changeSettings" id="TelemetryReport" type="checkbox" checked> Send Telemetry Reports
-              </label>
-            </div>
-          </div>
-
-          <hr>
-
-          <div class="row form-group">
-            <div class="col-xs-12">
-              <label for="">Enter your public hostname or IP address</label>
-              <input type="text" class="form-control" placeholder="127.0.0.1">
-            </div>
-          </div>
-
-          <hr>
-
-          <div class="row form-group">
-            <div class="col-xs-12">
-              <label for="">Enter the URI of a known seed</label>
-              <input type="text" class="form-control" placeholder="storj://api.storj.io:8443/78cfca0e01235db817728aec056d007672ffac63">
-            </div>
-          </div>
-
-          <hr>
-
-          <div class="row form-group">
-            <div class="col-xs-4">
-              <input type="number" class="form-control margin-top" placeholder="0">
-            </div>
-            <div class="col-xs-8">
-              <label for="">TCP port number the service should use <small>(0 for random)</small></small></label>
-            </div>
-          </div>
-
-          <div class="row form-group">
-            <div class="col-xs-4">
-              <select class="form-control margin-top" id="nat-select">
-                <option>Yes</option>
-                <option>No</option>
-              </select>
-            </div>
-            <div class="col-xs-8">
-              <label for="nat-select">Use NAT traversal strategies to become available on the network</b></label>
-            </div>
-          </div>
-
-          <hr>
-
-          <div class="row form-group">
-            <div class="col-xs-4">
-              <input type="number" class="form-control margin-top" placeholder="3">
-            </div>
-            <div class="col-xs-8">
-              <label for="">Number of tunnel connections other farmers can open through you</label>
-            </div>
-          </div>
-
-          <div class="row form-group">
-            <div class="col-xs-4">
-              <input type="number" class="form-control margin-top" placeholder="0">
-            </div>
-            <div class="col-xs-8">
-              <label for="">TCP port number the tunnel server should use <small>(0 for random)</small></label>
-            </div>
-          </div>
-
-          <div class="row form-group">
-            <div class="col-xs-4">
-              <input type="number" class="form-control margin-top" placeholder="0">
-            </div>
-            <div class="col-xs-8">
-              <label for="">Start TCP port for tunnel connections <small>(0 for random)</small></label>
-            </div>
-          </div>
-
-          <div class="row form-group">
-            <div class="col-xs-4">
-              <input type="number" class="form-control margin-top" placeholder="0">
-            </div>
-            <div class="col-xs-8">
-              <label>End TCP port for tunnel connections <small>(0 for random)</small></label>
-            </div>
-          </div>
-
-          <hr>
-
-          <div class="row form-group">
-            <div class="col-xs-12">
-              <label for="">Enter the path to store your encrypted private key</label>
-              <input type="text" class="form-control" placeholder="/home/gordon/.storjshare/id_ecdsa">
-            </div>
-          </div>
-
-          <div class="row form-group">
-            <div class="col-xs-12">
-              <label for="">Enter a password to protect your private key</label>
-              <input type="password" class="form-control" placeholder="********">
-            </div>
-          </div>
-
-          <hr>
-
-          <div class="row form-group">
-            <div class="col-xs-8">
-              <label for="">Logfile location</label>
-            </div>
-            <div class="col-xs-4">
-              <label>Logfile level</label>
-            </div>
-            <div class="col-xs-8">
-              <input type="text" class="form-control" placeholder="/home/gordon/.storjshare/">
-            </div>
-            <div class="col-xs-4">
-              <select class="form-control">
-                <option>0</option>
-                <option>1</option>
-                <option>2</option>
-                <option selected>3</option>
-                <option>4</option>
-              </select>
-
-            </div>
-          </div>
-
         </div>
         
         <div class="modal-footer">
