Add paragraphs to about modal

--- a/app/storjshare.html
+++ b/app/storjshare.html
@@ -390,11 +390,9 @@
           <h4 class="modal-title">About Storj Share</h4>
         </div>
         <div class="modal-body">
-          Storj Share {{version}}
-          <br/>
-          Core Library {{core}}
-          <br/>
-          Protocol {{protocol}}
+          <p>Storj Share {{version}}</p>
+          <p>Core Library {{core}}</p>
+          <p>Protocol {{protocol}}</p>
         </div>
       </div>
     </div>
