Changed window size for new settings modal

--- a/app/storjshare.html
+++ b/app/storjshare.html
@@ -192,7 +192,7 @@
           <li class="active"><a data-toggle="tab" href="#SettingsGeneral">General</a></li>
           <li><a data-toggle="tab" href="#SettingsNetwork">Network</a></li>
           <li><a data-toggle="tab" href="#SettingsTunnels">Tunnels</a></li>
-          <li><a data-toggle="tab" href="#SettingsKeys">Keys</a></li>
+          <!-- <li><a data-toggle="tab" href="#SettingsKeys">Keys</a></li> -->
           <li><a data-toggle="tab" href="#SettingsLogs">Logs</a></li>
         </ul>
 
@@ -353,7 +353,7 @@
 
           </div>
         </div>
-        
+
         <div class="modal-footer">
           <div class="col-xs-6">
             <button type="button" class="btn btn-green btn-block" data-dismiss="modal">Save</button>
